--- a/styles.css
+++ b/styles.css
@@ -443,9 +443,9 @@ body.menu-open {
 
 #hero-subtittle{
   position: fixed;
-  color: #1f283f;
+  color: #181f33;
   font-size: small;
-  font-weight: lighter;
+  font-weight: 350;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    transform: scaleY(0.95);
   left: 3rem;
