--- a/styles.css
+++ b/styles.css
@@ -457,6 +457,7 @@ font-size: medium;
   
 }
 #form-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -464,6 +465,17 @@ font-size: medium;
  width: 100%;
   position: fixed;
   top:250px;
+}
+
+
+#form_subtittle{
+  color: #0f192eda;
+  position: absolute;
+  top: 128px;
+  font-size: 10px;
+  display: flex;
+  z-index: 2000;
+
 }
 /* =====================================================
    FOOTER
