--- a/styles.css
+++ b/styles.css
@@ -445,7 +445,7 @@ body.menu-open {
 
 #hero-subtittle{
   position: fixed;
-  color: #181f33;
+  color: #1f283f;
 font-size: medium;
   font-weight: 350;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
