--- a/styles.css
+++ b/styles.css
@@ -592,8 +592,8 @@ body.menu-open #form_subtitle {
 }
 
 #text-container-subtitle {
-   font-size: 14px;
-   transform: scale(0.8);
+   font-size: 13px;
+  transform: scaleY(0.95);
      color: #f9f9fd;
    margin-top: -5px;
    margin-bottom: 25px;
@@ -641,7 +641,7 @@ max-width: 90%;
 
    justify-content: center;
     text-shadow: 0.5px 0.5px 0.5px #1f283f1c;
-    font-size: 14px;
+    font-size: 13px;
     transform: scaleY(0.95);
 
 
